--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a href="#Contact"><button class="btn2">Let's Talk</button></a>
                         </div>
                         <div class="image">
-                            <img src="image1.jpg" alt="Image">
+                            <img src="PORTFOLIO/image1.jpg" alt="Image">
                         </div>
                     </div>
                 </section>
@@ -51,7 +51,7 @@
             <section>
                 <div class="About">
                     <div class="Aboutimg">
-                        <img src="image2.webp" alt="Image">
+                        <img src="PORTFOLIO/image2.webp" alt="Image">
                     </div>
                     <div class="AboutMe" id="Aboutme">
                         <h1 class="AboutH1">About<span> Me</span></h1>
@@ -151,15 +151,15 @@
                         <h1 class="ProjH1">Latest <span>Projects</span></h1>
                         <div class="projcont">
                             <div class="proj1">
-                                <img src="image3.png" alt="Image">
+                                <img src="PORTFOLIO/image3.png" alt="Image">
                                 <h3>Food Court</h3>
                             </div>
                             <div class="proj2">
-                                <img src="image4.jpeg" alt="Image">
+                                <img src="PORTFOLIO/image4.jpeg" alt="Image">
                                 <h3>Library Management</h3>
                             </div>
                             <div class="proj3">
-                                <img src="image5.png" alt="Image">
+                                <img src="PORTFOLIO/image5.png" alt="Image">
                                 <h3>Hospital Management</h3>
                             </div>
                         </div>
